Stream Tool/Overlays/X and Y/Resources/XY.css
/* ... */
.stat {
    display: flex;
    align-items: center;
    gap: 5px;
    border: 3px solid rgb(46, 46, 46);
    border-radius: 20px;
    background-color: rgb(71, 71, 71);
    padding: 2px 10px 2px 10px;
}

.statIcon {
    display: flex;
    align-items: center;
    object-fit: contain;
    width: 20px;
    height: 20px;
}
#catchesIcon {
    stroke: white;
    fill: none;
    transform: scale(1.15);
}
#deathsIcon {
    fill: white;
}

.statNumber {
    color: #f8f8f8;
    font-family: "Aero";
    font-size: 20px;
    text-shadow: 0px 0px 5px black;
    margin-top: 4px;
}


/* Wild Encounter Section */

#wildEncounterDiv {
    opacity: 0;
    position: absolute;
    top: 358px;
    left: 52px;
    width: 373px;
    font-family: "Aero";
    font-size: 20px;
    color: white;
    text-shadow: 0px 0px 5px black;
    display: flex;
    flex-direction: column;
    background-color: #5a54676c;
    border-radius: 20px;
}

#wildPokeImgDiv {
    transform: translate(-25px, -75px);
    z-index: 1;
}


#wildBackground {
    width: 100%;
    height: 155px;
}


#wildInfoDiv {
    width: 200px;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.vsWildPokeTypeDiv {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.vsWildTypeDiv {
    display: flex;
    align-items: center;
    text-transform: uppercase;
    gap: 2px;
}
.typeIcon {
    height: 26px;
    filter: drop-shadow(0px 0px 2px black);
    transform: translateY(-1px);
}


#vsWildGenderRatio {
    display: flex;
    gap: 0px;
}

.vsWildGenderRatioDiv {
    display: flex;
    align-items: center;
    border-radius: 5px;
    height: 26px;
    gap: 5px;
    padding: 5px;
}


#vsWildAbilities {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
}

.vsWildAbilityText {
    background-color: rgba(78, 78, 78, 0.5);
    border-radius: 5px;
    height: 24px;
    display: flex;
    align-items: center;
    padding: 5px;
}
#vsWildAbilityH {
    border: 1px solid #5d4d68;
}


#vsWildStatsDiv {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 0px 50px 10px 50px;
    font-size: 18px;
}
  
.vsWildStat {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    border: 1px solid grey;
    height: 22px;
}
.vsWildStat:not(:first-child) {
    border-top: none;
}
.vsWildStatText {
    text-shadow: 0px 0px 2px black;
    z-index: 3;
    padding: 0px 5px;
}
  
.vsWildMeter {
    position: absolute;
    height: 100%;
    transition: width .5s;
    width: 0%;
    opacity: .7;
}
  
#vsWildStatHP {
    background-color: #4e2826;
}
#vsWildMeterHP {
    background-color: #C7312A;
}
#vsWildStatAT {
    background-color: #553726;
}
#vsWildMeterAT {
    background-color: #F77F32;
}
#vsWildStatDE {
    background-color: #4e3b18;
}
#vsWildMeterDE {
    background-color: #FFA40A;
}
#vsWildStatSA {
    background-color: #2b3a55;
}
#vsWildMeterSA {
    background-color: #5F92ED;
}
#vsWildStatSD {
    background-color: #2b4121;
}
#vsWildMeterSD {
    background-color: #72C34D;
}
#vsWildStatSP {
    background-color: #582836;
}
#vsWildMeterSP {
    background-color: #EB527D;
}
#vsWildStatTS {
    background-color: #3c214b;
}
#vsWildMeterTS {
    background-color: #b352eb;
}


/* Bottom Pokemon Section */

#botPokes {
    position: absolute;
    bottom: 0px;
    width: 100%;
    height: 187px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
    font-family: "Aero";
    color: #f8f8f8;
}


.pokeDiv {
    --healthy: #337E11;
    --warning: #7e7c11;
    --danger: #7e1111;
    --Par: var(--warning);
    --Poi: #56117e;
    --Fro: #1a8fa3;
    --Bur: #7e4611;
    --Sle: grey;
    --activeColor: var(--healthy);
    position: relative;
    height: 120px;
    width: 300px;
    border: thick double var(--activeColor);
    overflow: visible;
    border-radius: 30% / 100% 100% 100% 100%;
    transition: opacity .25s, margin-left .6s;
}
.pokeFai, .pokeDed {
    --activeColor: var(--danger) !important;
    filter: grayscale(.8) brightness(.8) !important;
}
.pokePar {
    --activeColor: var(--warning) !important;
}
.pokePoi {
    --activeColor: var(--Poi) !important;
}
.pokeFro {
    --activeColor: var(--Fro) !important;
}
.pokeBur {
    --activeColor: var(--Bur) !important;
}
.pokeSle {
    --activeColor: var(--Sle) !important;
}


.pokeTexts {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 20px;
    text-shadow: 0px 0px 5px black;
    transition: transform .5s;
}

.pokeDivMask {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 27% / 100% 100% 100% 100%;
    overflow: hidden;
}

.pokeLvlDiv {
    display: flex;
}

.pokeLvlBefore {
    background-color: var(--activeColor);
    width: 26px;
}
.pokeLvlTexts {
    display: flex;
    gap: 3px;
    background-color: var(--activeColor);
    padding: 6px 0px 0px 5px;
}
.pokeLvlAfter {
    background-color: var(--activeColor);
    width: 20px;
    border-bottom-right-radius: 100%;
}


.pokeNick {
    font-size: 32px;
}

.pokeSubText {
    display: flex;
    gap: 6px;
    font-size: 22px;
    font-style: italic;
}


.pokeHpDiv {
    display: flex;
    position: absolute;
    bottom: 0px;
    width: 100%;
    --bacColor: #363636;
    transition: transform .5s;
}
.pokeHpBefore {
    background-color: var(--bacColor);
    width: 26px;
    flex-shrink: 0;
}
.pokeHpText {
    display: flex;
    justify-content: center;
    width: 55px;
    background-color: var(--bacColor);
    padding: 5px 0px 1px 5px;
    z-index: 2;
    flex-shrink: 0;
    text-wrap: nowrap;
    color: #b6b6b6;
    font-size: 16px;
}
.pokeHpAfter {
    background-color: var(--bacColor);
    width: 24px;
    margin-left: -17px;
    border-top-right-radius: 50%;
    z-index: 1;
    flex-shrink: 0;
}
/* ... */

